force-app/main/default/objects/DocuSign_Envelope__c/DocuSign_Envelope__c.object-meta.xml
<CustomObject>
    <description>Suivi des enveloppes DocuSign envoyees pour les contrats candidats.</description>
    <label>DocuSign Envelope</label>
    <nameField>
        <displayFormat>DSE-{000000}</displayFormat>
        <label>DocuSign Envelope Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>DocuSign Envelopes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>