force-app/main/default/objects/DocuSign_Envelope__c/fields/Envelope_Id__c.field-meta.xml
<CustomField>
    <fullName>Envelope_Id__c</fullName>
    <description>Identifiant unique de l envelope DocuSign.</description>
    <externalId>true</externalId>
    <label>Envelope Id</label>
    <length>120</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>