force-app/main/default/objects/DocuSign_Envelope__c/fields/Last_Webhook_At__c.field-meta.xml
<CustomField>
    <fullName>Last_Webhook_At__c</fullName>
    <label>Last Webhook At</label>
    <type>DateTime</type>
</CustomField>