force-app/main/default/objects/DocuSign_Envelope__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Candidature Salesforce associee a cette enveloppe.</description>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>DocuSign Envelopes</relationshipLabel>
    <relationshipName>DocuSign_Envelopes</relationshipName>
    <type>Lookup</type>
</CustomField>