force-app/main/default/objects/DocuSign_Envelope__c/fields/Raw_Last_Response__c.field-meta.xml
<CustomField>
    <fullName>Raw_Last_Response__c</fullName>
    <label>Raw Last Response</label>
    <type>LongTextArea</type>
    <length>131072</length>
</CustomField>