force-app/main/default/objects/DocuSign_Envelope__c/fields/Signed_File_ContentDocumentId__c.field-meta.xml
<CustomField>
    <fullName>Signed_File_ContentDocumentId__c</fullName>
    <description>ContentDocumentId du PDF signe telecharge depuis DocuSign.</description>
    <label>Signed File ContentDocumentId</label>
    <length>18</length>
    <type>Text</type>
</CustomField>